# sim-tools

./: .buildinfo  .gitignore  00_front_page.html  03_CHANGES.html  CHANGES.md  CITATION.cff  README.md  design_nspp.ipynb  environment.yml  feature_list.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sw20_tutorial.ipynb  test_ocbam.py  test_procedures.py
.github/workflows/: python-package.yml  python-publish.yml
01_sampling/: 01_distributions_examples.html  02_time_dependent_examples.html
02_ovs/: 03_sw21_tutorial.html
03_trace/: 01_model.html  01_simple_trace.html
_sources/: 00_front_page.md  03_CHANGES.md
_sources/01_sampling/: 02_time_dependent_examples.ipynb
binder/: environment.yml
docs/: 03_CHANGES.md  _config.yml  _toc.yml
docs/01_sampling/: 01_distributions_examples.ipynb  02_time_dependent_examples.ipynb
docs/03_trace/: 01_model.ipynb  01_simple_trace.ipynb  04_model.ipynb
docs/03_trace/output/: table_3.txt
docs/04_replications/: 01_automated_reps.ipynb
examples/: distributions_examples.ipynb  sw21_tutorial.ipynb
ovs/: __init__.py  evaluation.py  fixed_budget.py  indifference_zone.py  toy_models.py  unit_tests.py
sim_tools/: __init__.py  datasets.py  distributions.py  output_analysis.py  time_dependent.py  trace.py
sim_tools/ovs/: evaluation.py  fixed_budget.py  indifference_zone.py  toy_models.py  unit_tests.py
tests/: test_dists.py  test_time_dep.py
