[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-tools"
dynamic = ["version"]
description = "Simulation Tools for Education and Practice"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Monks", email = "t.m.w.monks@exeter.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "matplotlib>=3.1.3",
    "numpy>=1.18.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/TomMonks/sim-tools"
"Bug Tracker" = "https://github.com/TomMonks/sim-tools/issues"
Documentation = "https://tommonks.github.io/sim-tools"

[tool.hatch.version]
path = "sim_tools/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sim_tools",
]
